@@ -1,2 +1,1 @@
-DIST python-dice-2.4.2.tar.gz 18922 SHA256 f7738436cfc8976bc5e61809bfb5c6a910d892601d46042a91c314a3b6a98f29 SHA512 821171d762deecf1b5a9cd9be20207c923a0ff37f35b3de339127e69ef588c9a63ad5d4680f286c3415ad130f4e156cd1c31135285fd00153f6ee6ba55ea01da WHIRLPOOL 5295b60214d439f2215880c54eade25ac907bd240986d25907e4439578bf3aadcb0dff02ea1cb1a2ff1b2d6d3a4610d87625bb2212db6ce7ccb8042b8742d3af
-DIST python-dice-3.0.0.tar.gz 23514 SHA256 eacd7d0c044d1b0f88ec6d33625952e594c900b7ebea6329058461cdad64bcf6 SHA512 181a0fc9057052e252bac817f7e076a9367cf74537de7182d5842804498f43c0e7a69b65975bbee03c9de340fd05d712fabb5207df5c7dae1faf4717912741dd WHIRLPOOL 1b86068d02807672c1d79c4f8274f723d5ba98c40170e27140abde80802b393ba447d3fc08a9c268ed2fd6deaa45a6c9d18902abda2ba74eb869cf79b9c4d0b4
+DIST python-dice-3.1.0.tar.gz 23510 SHA256 f28a497fd59ffb44cb3c957445feff9677ba4768e8d784cf080986f20fa0d56d SHA512 121ab7d09b2b7b799f0894ee0ab2ee45b7ebc3c8f721849cdefe5c8f7bb6bb07560dd9af009d03a0ac8a40da7dd106f593bd884fc20f4e899da67ce08e46b705 WHIRLPOOL 047ce6cb95afa800324144ed970bcab407c3486fbecaab5881430bea968df18b84ed22767cd5a756796b61084c6dc4c1a304abc587101258297cecf25103d3a1
